--- a/pages/cut_down/cut_down.wxss
+++ b/pages/cut_down/cut_down.wxss
@@ -17,9 +17,7 @@
         margin: 0 30rpx;
         display: flex;
         flex-direction: row;
-        border-bottom: 1rpx solid #C0C2D6;
         padding: 40rpx 0;
-        /* width: 100%; */
         position: relative;
         justify-content: space-between;
     }
@@ -214,28 +212,33 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        border-radius: 10rpx;
+        border-radius: 20rpx;
         background: #F6F6F6;
         height: 100rpx;
+        position: relative;
     }
     
-    .tag {
-        font-family: Monospaced Number, Chinese Quote, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif;
-        font-size: 28rpx;
-        line-height: 1.5;
-        color: #1193EE;
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
+    .account:after {
+        content: "";
+        position: absolute;
         display: inline-block;
-        line-height: 34rpx;
-        height: 34rpx;
-        padding: 0rpx 12rpx;
-        border-radius: 8rpx;
-        border: 2rpx solid #E7F4FF;
-        background: #E7F4FF;
-        font-size: 26rpx;
-        /* margin-right: 16rpx; */
-        cursor: pointer;
-        white-space: nowrap
+        top: -14rpx;
+        left: 60rpx;
+        width: 0rpx;
+        height: 0rpx;
+        border-style: solid;
+        border-width: 14rpx;
+        border-radius: 1rpx;
+        border-color: #F6F6F6 #F6F6F6 transparent transparent;
+        transform: rotate(-45deg);
+    }
+    
+    .account .xs-btn {
+        width: 140rpx;
+    }
+    
+    .gold-num {
+        margin-left: 20rpx;
+        color: #000;
+        font-weight: bold
     }
