--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -5,29 +5,30 @@
       <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
       <view class='header_img_wrap' >
         <image class="img" src='{{userInfo && userInfo.avatarUrl? userInfo.avatarUrl:"/images/nologinuser.png"}}'></image>
-        <view class="vip" wx:if="{{isVip}}">V</view>
+        <!-- wx:if="{{isVip}}" -->
+        <view class="vip" wx:if="{{isVip}}">VIP</view>
       </view>
       <text class='user-name'>{{userInfo.nickName? userInfo.nickName:"点击头像立即登录" }}</text>
-      <view class='row center'>
+      <!-- <view class='row center'>
         <image class="sm_icon" src='/images/bookMark_active.png'></image>
         <view class='infos-desc'>
           <text>已有</text>
           <text class="num">{{gold}}</text>
           <text>张书签</text>
         </view>
-      </view>
+      </view> -->
       <view class='row num-row'>
-        <view class="num-item">
-          <text>{{validViewCount}}</text>
-          <text>今日有效阅读</text>
+        <view class="num-item" bindtap="toOrderList">
+          <text>{{ordernum}}</text>
+          <text>书架</text>
         </view>
         <view class="num-item">
-          <text>{{viewCount}}</text>
-          <text>今日总计阅读</text>
+          <text>{{gold}}</text>
+          <text>书签</text>
         </view>
-        <view class="num-item">
-          <text>{{todaygold}}</text>
-          <text>今日阅读书签</text>
+        <view class="num-item" bindtap='toMyCollect'>
+          <text>{{collectNum}}</text>
+          <text>收藏</text>
         </view>
       </view>
     </view>
@@ -39,8 +40,8 @@
           {{Vip.endTime}} 到期 
         </view>
         <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
-          <view class="btn blue-color" wx:if="{{isVip}}">已领取</view>
-          <view class="btn blue-color" wx:else bindtap="bindReceive">领取</view>
+          <view class="btn blue-color disabled" wx:if="{{isVip}}">已领取</view>
+          <view class="btn active" wx:else bindtap="bindReceive">领取</view>
         </view>
       </wux-media>
     </view>
@@ -51,6 +52,7 @@
         <image class="img" src='/images/star-border-icon.png'></image>
         <view class='menu-title'>今日任务</view>
         <view class='right'>
+          <text class="a" style="color: #99B9FA;margin-right: 20rpx;">任务及书签流水</text>
           <view class="badge">
             <wux-badge dot />
           </view>
@@ -61,7 +63,7 @@
   </view>
   <view class="menu-wrap">
     <view class="menu">
-      <view class='menu-item' bindtap="toOrderList">
+      <!-- <view class='menu-item' bindtap="toOrderList">
         <image class="img" src='/images/myorder-icon.png'></image>
         <text class='menu-title'>我的书架</text>
         <view class='right'>
@@ -77,7 +79,7 @@
         <view class='right'>
           <view class="cart"></view>
         </view>
-      </view>
+      </view> -->
       <view class='menu-item'>
         <image class="img" src='/images/contact-icon.png'></image>
         <text class="menu-title">联系客服</text>
